hard-gists/1497850/run.log
=== Docker Run Log for 1497850 ===
Started at: Mi 29. Okt 12:15:35 CET 2025

[2025-10-29 12:15:35] START: Running container for 1497850
[2025-10-29 12:15:35] SUCCESS: Container 9a074804bd17b804113c97afdf0917b0159733513c2c7be85768c35dfd0c7999 started for 1497850
=== Container logs for 1497850 ===
  File "/snippet.py", line 101
    print "You don't seem to have IPython installed, or the dependencies of "
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1497850 ===
[2025-10-29 12:15:37] INFO: Container 9a074804bd17b804113c97afdf0917b0159733513c2c7be85768c35dfd0c7999 has stopped
